# Dual-Mode-Chatbot

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  ingest.py  list_models.py  pyproject.toml  requirements.txt  test_15_flash.py  test_15_flash_latest.py  test_31.py  test_70b.py  test_all_models.py  test_groq.py  test_memory.py  test_models_fast.py  test_models_fast2.py  test_tool_call.py  test_v1.py
backend/app/: agent.py  database.py  main.py  tools.py
backend/tests/: conftest.py  test_agent.py  test_tools.py
backend/tests/unit/: test_agent_unit.py  test_main_api.py  test_tools_unit.py
frontend/: package-lock.json
frontend/src/app/: page.tsx
